[metadata]
name = subproxy
author = Yoonyoung Cho
author_email = jchocholate@gmail.com
version = 0.0.3
description = General Subprocess Proxy Object
long_description = file: README.md
long_description_content_type = text/markdown
keywords = multiprocessing, proxy
platforms = Linux
url = https://github.com/yycho0108/Subproxy
download_url = https://github.com/yycho0108/Subproxy
license = MIT
classifiers = 
    Development Status :: 1 - Planning
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
